add VM options for tests